[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
md-5 = "^0.10"

# Binaries

[[bin]]
name = "day1p1"
path = "src/day1/part1.rs"

[[bin]]
name = "day2p1"
path = "src/day2/part1.rs"

[[bin]]
name = "day3p1"
path = "src/day3/part1.rs"

[[bin]]
name = "day4p1"
path = "src/day4/part1.rs"

[[bin]]
name = "day5p1"
path = "src/day5/part1.rs"

[[bin]]
name = "day6p1"
path = "src/day6/part1.rs"

[[bin]]
name = "day8p1"
path = "src/day8/part1.rs"

[[bin]]
name = "day9p1"
path = "src/day9/part1.rs"

[[bin]]
name = "day10p1"
path = "src/day10/part1.rs"
