[package]
name = "day15"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../../utils" }
kombini = { git = "https://github.com/Caelmyn/testing-random-stuff-in-rust"}
partitions = { git = "https://github.com/Caelmyn/testing-random-stuff-in-rust"}
